--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,9 +15,8 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply text-[var(--foreground)] bg-[var(--background)] antialiased;
+  font-family: var(--font-barlow-condensed), sans-serif;
 }
 
 @layer utilities {
